<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.orgst</groupId>
    <artifactId>orgST</artifactId>
    <version>1.8</version>

    <name>orgST</name>
    <url>https://orgst.ca</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <mainClass>org.orgst.App</mainClass>
        <javafx.version>21</javafx.version>
        <mavenVersion>3.9.9</mavenVersion>
        <maven.build.timestamp.format>dd-MM-yyyy'T'HH:mm:ss'Z'</maven.build.timestamp.format>
    </properties>

    <repositories>
        <repository>
            <id>central</id>
            <url>https://repo.maven.apache.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>polyglot</artifactId> 
            <version>24.2.0</version>
        </dependency>
        <dependency>
            <groupId>org.graalvm.polyglot</groupId>
            <artifactId>python</artifactId> 
            <version>24.2.0</version>
            <type>pom</type>
        </dependency>
        <dependency>
        <!-- Laterna -->
            <groupId>com.googlecode.lanterna</groupId>
            <artifactId>lanterna</artifactId>
            <version>3.1.1</version>
        </dependency>
        <!-- JavaFX -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
        <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
                <execution>
                    <id>stage-changes</id>
                    <phase>package</phase> <!-- or install, verify, etc -->
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>bash</executable>
                        <arguments>
                            <argument>-c</argument>
                            <argument>cd .. &amp;&amp; git add .</argument>
                        </arguments>
                    </configuration>
                </execution>
                <execution>
                    <id>commit-changes</id>
                    <phase>package</phase> <!-- or install, verify, etc -->
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>git</executable>
                        <arguments>
                            <argument>commit</argument>
                            <argument>-m</argument>
                            <argument>Updated v${version}</argument>
                        </arguments>
                    </configuration>
                </execution>
                <execution>
                    <id>push-changes</id>
                    <phase>package</phase> <!-- or install, verify, etc -->
                    <goals>
                        <goal>exec</goal>
                    </goals>
                    <configuration>
                        <executable>git</executable>
                        <arguments>
                            <argument>push</argument>
                            <argument>origin</argument>
                            <argument>java</argument>
                        </arguments>
                    </configuration>
                </execution>
            </executions>
        </plugin>
            <!-- Maven Compiler -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>21</release>
                </configuration>
            </plugin>

            <!-- Maven Shade = ShadowJar -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals><goal>shade</goal></goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${mainClass}</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>